updated for mobile

--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -29,15 +29,21 @@
     }
 }
 
-/* div.blog-intro > h1 {
-    color:white;
-    font-family: Permanent Marker;
-    font-size: 120px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-} */
+@media (pointer:none), (pointer:coarse) {
+    /* For Mobile */
+    #blog-grid-container{
+        display:grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 50px 700px 100px 1fr 300px 150px;
+        grid-template-areas:
+        "menu"
+        "intro"
+        "author"
+        "text"
+        "next-story"
+        "footer";
+    }
+}
 
 .blog-title {
     color:white;
@@ -47,12 +53,6 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-}
-
-@media (min-width: 1000px) {
-    .blog-title {
-        font-size: 120px;
-    }
 }
 
 div.blog-intro {
@@ -92,6 +92,19 @@ div.blog-intro:before {
     #author-grid-container{
         display:grid;
         grid-template-columns: 1fr 5% 45% 1fr;
+        grid-template-rows: auto auto auto;
+        grid-template-areas:
+        "top-line top-line top-line top-line"
+        "author-left-space author-pic author-intro author-right-space"
+        "bottom-line bottom-line bottom-line bottom-line";
+    }
+}
+
+@media (pointer:none), (pointer:coarse) {
+    /* For Mobile */
+    #author-grid-container{
+        display:grid;
+        grid-template-columns: 1fr 10% 85% 1fr;
         grid-template-rows: auto auto auto;
         grid-template-areas:
         "top-line top-line top-line top-line"
@@ -146,6 +159,22 @@ div.blog-intro:before {
     #blog-text-grid-container{
         display:grid;
         grid-template-columns: 1fr 50% 1fr;
+        grid-template-rows: auto auto auto auto auto auto;
+        grid-template-areas:
+        "left-space text-1 right-space"
+        "left-space pic-1 right-space"
+        "left-space pic-cap-1 right-space"
+        "left-space text-2 right-space"
+        "left-space text-3 right-space"
+        "left-space text-4 right-space";
+    }
+}
+
+@media (pointer:none), (pointer:coarse) {
+    /* For Mobile */
+    #blog-text-grid-container{
+        display:grid;
+        grid-template-columns: 1fr 90% 1fr;
         grid-template-rows: auto auto auto auto auto auto;
         grid-template-areas:
         "left-space text-1 right-space"
@@ -224,6 +253,18 @@ div.blog-intro:before {
     }
 }
 
+@media (pointer:none), (pointer:coarse) {
+    /* For Mobile */
+    #next-story-grid-container {
+        display:grid;
+        grid-template-columns: 1fr 60% 1fr;
+        grid-template-rows: 30% 1fr;
+        grid-template-areas:
+        "left-next-story-space next-story-intro right-next-story-space"
+        "left-next-story-space next-story-area-1 right-next-story-space";
+    }
+}
+
 #next-story-intro {
     grid-area: next-story-intro;
     font-family: Roboto;
@@ -266,6 +307,10 @@ div.blog-intro:before {
 }
 
 @media (min-width: 1000px) {
+    .blog-title {
+        font-size: 120px;
+    }
+    
     #next-story-intro {
         font-size: 25px;
     }
@@ -286,5 +331,34 @@ div.blog-intro:before {
 
     .author-intro {
         font-size: 15px;
+    }
+}
+
+@media (pointer:none), (pointer:coarse) {
+    .blog-title {
+        font-size: 70px;
+    }
+    
+    .author-intro {
+        line-height: 5px;
+    }
+
+    #blog-pic-1 {
+        height:500px;
+    }
+    
+    #next-story-intro {
+        font-size: 35px;
+    }
+    
+    #next-story-pic-1 {
+        height: 100px;
+        width: 100px;
+        margin-top: 20px;
+    }
+
+    #next-story-title-1 {
+        margin-top: 40px;
+        font-size: 30px;
     }
 }
