--- a/css/homepage-style.css
+++ b/css/homepage-style.css
@@ -165,3 +165,25 @@ that is currently Firefox-only */
         min-width: 300px;
     }
 }
+
+@media (pointer:none), (pointer:coarse) {
+
+    #home-grid-container{
+        display:grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 50px 600px auto 150px;
+        grid-template-areas:
+        "menu"
+        "intro"
+        "blog"
+        "footer";
+    }
+
+    #homepage-title {
+        font-size: 80px;
+    }
+
+    #homepage-about{
+        font-size: 40px;
+    }
+}
