--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 @import "menubar.css";
 @import "footer.css";
+@import "index-responsive.css";
 
 #home-grid-container{
     display:grid;
@@ -10,19 +11,6 @@
     "intro"
     "blog"
     "footer";
-}
-
-@media (min-width: 1000px) {
-    #home-grid-container{
-        display:grid;
-        grid-template-columns: 100%;
-        grid-template-rows: 50px 700px 500px 100px;
-        grid-template-areas:
-        "menu"
-        "intro"
-        "blog"
-        "footer";
-    }
 }
 
 .homepage-intro{
@@ -152,6 +140,17 @@ that is currently Firefox-only */
 }
 
 @media (min-width: 1000px) {
+    #home-grid-container{
+        display:grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 50px 700px 500px 100px;
+        grid-template-areas:
+        "menu"
+        "intro"
+        "blog"
+        "footer";
+    }
+
     #homepage-title{
         font-size: 120px;
     }
@@ -167,11 +166,10 @@ that is currently Firefox-only */
 }
 
 @media (pointer:none), (pointer:coarse) {
-
     #home-grid-container{
         display:grid;
         grid-template-columns: 100%;
-        grid-template-rows: 50px 600px auto 150px;
+        grid-template-rows: 50px 600px auto auto;
         grid-template-areas:
         "menu"
         "intro"
