--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -1,5 +1,6 @@
 @import "menubar.css";
 @import "footer.css";
+@import "nextstory.css";
 
 #blog-grid-container{
     display:grid;
@@ -141,59 +142,10 @@ div.blog-intro:before {
     margin-top: 10px;
 }
 
-.next-story {
-    grid-area: next-story;
-    margin-bottom: 30px;
-}
-
-#next-story-grid-container {
-    display:grid;
-    grid-template-columns: 1fr 200px 1fr;
-    grid-template-rows: 30% 1fr;
-    grid-template-areas:
-    "left-next-story-space next-story-intro right-next-story-space"
-    "left-next-story-space next-story-area-1 right-next-story-space";
-}
-
-#next-story-intro {
-    grid-area: next-story-intro;
-    font-family: Roboto;
-    font-weight: bold;
-    font-size: 15px;
-    text-decoration: underline;
-}
-
-.next-story-1 {
-    grid-area: next-story-area-1;
-}
-
-.next-story-1:hover {
-    opacity: 0.6;
-}
-
-#next-story-pic-1 {
-    float: left;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    height: 50px;
-    width: 50px;
-}
-
-#next-story-title-1 {
-    float: left;
-    font-family: Roboto;
-    font-weight: bold;
-    color: black;
-    font-size: 10px;
-    margin-top: 30px;
-    margin-left: 20px;
-}
-
 @media (min-width: 600px) {
     #blog-pic-1 {
         height:300px;
     }
-
 }
 
 @media (min-width: 1000px) {
@@ -233,35 +185,12 @@ div.blog-intro:before {
         "left-space text-4 right-space";
     }
 
-    #next-story-grid-container {
-        display:grid;
-        grid-template-columns: 1fr 600px 1fr;
-        grid-template-rows: 30% 1fr;
-        grid-template-areas:
-        "left-next-story-space next-story-intro right-next-story-space"
-        "left-next-story-space next-story-area-1 right-next-story-space";
-    }
-
     .blog-title {
         font-size: 120px;
-    }
-    
-    #next-story-intro {
-        font-size: 25px;
     }
 
     #blog-pic-1 {
         height:500px;
-    }
-
-    #next-story-pic-1 {
-        height: 75px;
-        width: 75px;
-    }
-
-    #next-story-title-1 {
-        margin-top: 40px;
-        font-size: 20px;
     }
 
     .author-intro {
@@ -306,15 +235,6 @@ div.blog-intro:before {
         "left-space text-4 right-space";
     }
 
-    #next-story-grid-container {
-        display:grid;
-        grid-template-columns: 1fr 60% 1fr;
-        grid-template-rows: 30% 1fr;
-        grid-template-areas:
-        "left-next-story-space next-story-intro right-next-story-space"
-        "left-next-story-space next-story-area-1 right-next-story-space";
-    }
-
     .blog-title {
         font-size: 70px;
     }
@@ -325,20 +245,5 @@ div.blog-intro:before {
 
     #blog-pic-1 {
         height:500px;
-    }
-    
-    #next-story-intro {
-        font-size: 35px;
-    }
-    
-    #next-story-pic-1 {
-        height: 100px;
-        width: 100px;
-        margin-top: 20px;
-    }
-
-    #next-story-title-1 {
-        margin-top: 40px;
-        font-size: 30px;
     }
 }
